--- a/.github/workflows/image-optimizer.yml
+++ b/.github/workflows/image-optimizer.yml
@@ -18,4 +18,4 @@ jobs:
         uses: crush-pics/crush-pics-github-action@master
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          api-key: ${{ secrets.eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJsb2dpbiI6IjR6aW1zOTVAZ21haWwuY29tIiwiZW1haWwiOm51bGwsInBsYW4iOiJmcmVlIiwidG9rZW5fY3JlYXRlZF9hdCI6MTY3NzMwNzM3NCwicXVvdGEiOnsidG90YWxfYnl0ZXMiOjI1MDAwMDAwLCJ1c2VkX2J5dGVzIjowfX0.WM3uGEFKY6jfD3UIP-_GDBIbswjeMHZblsCwuG2_wF8 }}
+          api-key: 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJsb2dpbiI6IjR6aW1zOTVAZ21haWwuY29tIiwiZW1haWwiOm51bGwsInBsYW4iOiJmcmVlIiwidG9rZW5fY3JlYXRlZF9hdCI6MTY3NzMwNzM3NCwicXVvdGEiOnsidG90YWxfYnl0ZXMiOjI1MDAwMDAwLCJ1c2VkX2J5dGVzIjowfX0.WM3uGEFKY6jfD3UIP-_GDBIbswjeMHZblsCwuG2_wF8'
