--- a/.github/workflows/calibreapp-image-actions.yml
+++ b/.github/workflows/calibreapp-image-actions.yml
@@ -1,19 +1,23 @@
 name: Compress Images
 on:
-  push:
+  pull_request:
     paths:
       - '**.jpg'
       - '**.jpeg'
       - '**.png'
       - '**.webp'
+  workflow_dispatch:  # Added to trigger manually
+
 jobs:
   build:
+    if: github.event.pull_request.head.repo.full_name == github.repository
     name: calibreapp/image-actions
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+
       - name: Compress Images
         uses: calibreapp/image-actions@main
         with:
